docs/api/qiskit/0.19/qiskit.ignis.verification.AccreditationFitter.mdx
---
title: AccreditationFitter (v0.19)
description: API reference for qiskit.ignis.verification.AccreditationFitter in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.ignis.verification.AccreditationFitter
---

# AccreditationFitter

<Class id="qiskit.ignis.verification.AccreditationFitter" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-ignis/tree/stable/0.3/qiskit/ignis/verification/accreditation/fitters.py" signature="AccreditationFitter" modifiers="class">
  Class for fitters for accreditation

  Implementation follows the methods from Samuele Ferracin, Theodoros Kapourniotis and Animesh Datta New Journal of Physics, Volume 21, November 2019 [https://iopscience.iop.org/article/10.1088/1367-2630/ab4fd6](https://iopscience.iop.org/article/10.1088/1367-2630/ab4fd6)

  ## Attributes

  <span id="accreditationfitter-n-acc" />

  ### N\_acc

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.N_acc" attributeValue="0" />

  <span id="accreditationfitter-bound" />

  ### bound

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.bound" attributeValue="1" />

  <span id="accreditationfitter-confidence" />

  ### confidence

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.confidence" attributeValue="1" />

  <span id="accreditationfitter-flag" />

  ### flag

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.flag" attributeValue="'accepted'" />

  <span id="accreditationfitter-g-num" />

  ### g\_num

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.g_num" attributeValue="1" />

  <span id="accreditationfitter-num-runs" />

  ### num\_runs

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.num_runs" attributeValue="0" />

  <span id="accreditationfitter-num-traps" />

  ### num\_traps

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.num_traps" attributeValue="0" />

  <span id="accreditationfitter-outputs" />

  ### outputs

  <Attribute id="qiskit.ignis.verification.AccreditationFitter.outputs" attributeValue="[]" />

  ## Methods

  <span id="accreditationfitter-bound-variation-distance" />

  ### bound\_variation\_distance

  <Function id="qiskit.ignis.verification.AccreditationFitter.bound_variation_distance" signature="AccreditationFitter.bound_variation_distance(theta)">
    This function computes the bound on variation distance based and the confidence

    **Parameters**

    **theta** (*float*) – number between 0 and 1
  </Function>

  <span id="accreditationfitter-single-protocol-run" />

  ### single\_protocol\_run

  <Function id="qiskit.ignis.verification.AccreditationFitter.single_protocol_run" signature="AccreditationFitter.single_protocol_run(results, postp_list, v_zero)">
    Single protocol run of accreditation protocol on simul backend

    **Parameters**

    *   **results** ([*Result*](qiskit.result.Result "qiskit.result.Result")) – results of the quantum job
    *   **postp\_list** (*list*) – list of strings used to post-process outputs
    *   **v\_zero** (*int*) – position of target
  </Function>
</Class>

